# start

./: .replit  pyproject.toml  replit.nix  requirements.txt  setup.sh
src/: app.py  data_augmentation.py  dataset_handler.py  framework_converter.py  hyperparameter_tuning.py  model_handler.py  training_utils.py  visualization.py
src/database/: db_handler.py  models.py
